--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "dependencies": {
     "@dvgis/dc-sdk": "^2.2.5",
+    "@types/react": "^18.0.22",
+    "@types/react-router-dom": "^5.3.3",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "history": "^5.0.0",
@@ -30,7 +32,9 @@
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
-    "redux": "^4.1.0"
+    "redux": "^4.1.0",
+    "ts-loader": "^9.4.1",
+    "typescript": "^4.8.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.14.5",
@@ -38,6 +42,7 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@types/react-dom": "^18.0.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "copy-webpack-plugin": "^9.0.1",
