--- a/.prettierrc
+++ b/.prettierrc
@@ -1,5 +1,7 @@
 {
-  "eslintIntegration": true,
-  "singleQuote": true,
-  "semi": false
+  "semi": true,
+  "singleQuote": false,
+  "trailingComma": "es5",
+  "tabWidth": 2,
+  "endOfLine": "lf"
 }
