--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
   },
   "dependencies": {
     "@dvgis/dc-sdk": "^2.2.5",
+    "@material-ui/core": "^4.12.4",
     "@types/react": "^18.0.22",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "history": "^5.0.0",
+    "mobx": "^6.1.0",
+    "mobx-react": "^7.5.3",
     "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
