--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@dvgis/dc-sdk": "^2.2.5",
+    "@haichuang/components": "^0.0.22-alpha.0",
     "@material-ui/core": "^4.12.4",
     "@types/react": "^18.0.22",
     "@types/react-router-dom": "^5.3.3",
@@ -30,7 +31,7 @@
     "history": "^5.0.0",
     "mobx": "^6.1.0",
     "mobx-react": "^7.5.3",
-    "node-sass": "^6.0.1",
+    "node-sass": "^8.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router": "^5.2.0",
