feat:属性面板组件

--- a/package.json
+++ b/package.json
@@ -23,7 +23,9 @@
   "dependencies": {
     "@dvgis/dc-sdk": "^2.2.5",
     "@haichuang/components": "^0.0.22-alpha.0",
-    "@material-ui/core": "^4.12.4",
+    "@mui/icons-material": "^5.10.3",
+    "@mui/lab": "^5.0.0-alpha.97",
+    "@mui/material": "^5.10.3",
     "@types/react": "^18.0.22",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.16.6",
@@ -32,8 +34,8 @@
     "mobx": "^6.1.0",
     "mobx-react": "^7.5.3",
     "node-sass": "^8.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "redux": "^4.1.0",
