--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mobx": "^6.1.0",
     "mobx-react": "^7.5.3",
     "node-sass": "^8.0.0",
+    "pubsub-js": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
