--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "antd": "^4.16.6",
     "axios": "^0.21.1",
     "history": "^5.0.0",
+    "html2canvas": "^1.4.1",
     "mobx": "^6.1.0",
     "mobx-react": "^7.5.3",
     "node-sass": "^8.0.0",
@@ -50,6 +51,7 @@
     "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@types/pubsub-js": "^1.8.3",
     "@types/react-dom": "^18.0.7",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
