--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@types/react": "^18.0.22",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^4.16.6",
-    "axios": "^0.21.1",
+    "axios": "^1.2.0",
+    "dotenv-cli": "^6.0.0",
+    "dotenv-webpack": "^8.0.1",
     "history": "^5.0.0",
     "html2canvas": "^1.4.1",
     "mobx": "^6.1.0",
